<resources>
    <string name="app_name">CataMate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_infos">Infos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="privacy_policy_acceptance">By tapping Login, Register or More options, I agree to CataMate\'s Terms of Service and Privacy Policy.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_not_matched_password">The two passwords given don\'t match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="marketing_com_acceptance">I\'d like to receive marketing and policy communications from CataMate and its partners.</string>

    <string name="male_sex">Male</string>
    <string name="female_sex">Female</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_save">Save</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--<string name="search_hint">Search</string>-->
</resources>
