<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:padding="@dimen/login_activity_padding"
    tools:context=".InfosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Introduce your age"
                android:textStyle="italic"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <View
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:paddingHorizontal="14dp"
                    android:layout_weight="4"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableEnd="@android:drawable/ic_menu_my_calendar"
                        android:onClick="showDatePickerDialog" />

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/sex_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sex"
                android:textStyle="italic"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <View
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:paddingHorizontal="14dp"
                    android:layout_weight="4"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <RadioGroup
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton android:id="@+id/radio_pirates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male_sex"/>

                        <RadioButton android:id="@+id/radio_ninjas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female_sex"/>

                    </RadioGroup>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/social_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have children ?"
                android:textStyle="italic"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <View
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:paddingHorizontal="14dp"
                    android:layout_weight="4"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <EditText
                        android:id="@+id/children_edit_text"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="0"
                        android:singleLine="true"/>

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="child"-->
                        <!--android:textSize="18sp"-->
                        <!--android:layout_toRightOf="@id/children_edit_text"/>-->
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have a chronic desease ?"
                android:textStyle="italic"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <View
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:paddingHorizontal="14dp"
                    android:layout_weight="4"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <RadioGroup
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"/>

                    </RadioGroup>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have allergies ?"
                android:textStyle="italic"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <View
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:paddingHorizontal="14dp"
                    android:layout_weight="4"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <RadioGroup
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"/>

                    </RadioGroup>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have a handicap ?"
                android:textStyle="italic"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <View
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:paddingHorizontal="14dp"
                    android:layout_weight="4"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <RadioGroup
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"/>

                    </RadioGroup>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:drawablePadding="14dp"
                android:paddingHorizontal="96dp"
                android:text="@string/action_save"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>